--- a/src/shared/components/elements/Navbar/Navbar.scss
+++ b/src/shared/components/elements/Navbar/Navbar.scss
@@ -29,7 +29,11 @@
   &.justifyContentCenter > ul {
     justify-content: center;
   }
-  &.navTabs > ul {
+  &.navTabs > ul > li {
+    padding: 10px;
+    border: 1px black solid;
+    border-bottom: none;
+    border-radius: 15px 15px 0 0;
   }
 
   input {
