--- a/src/shared/components/elements/Navbar/Navbar.scss
+++ b/src/shared/components/elements/Navbar/Navbar.scss
@@ -34,6 +34,9 @@
     border: 1px black solid;
     border-bottom: none;
     border-radius: 15px 15px 0 0;
+    &:hover {
+      cursor: pointer;
+    }
   }
 
   input {
