--- a/src/theme/_base2.scss
+++ b/src/theme/_base2.scss
@@ -1,5 +1,7 @@
 @import 'theme/_helpers';
-
+/*
+currently nothing of this can be used, because all classes
+in order to use classes, make a separate component for the class (e.g., a Wrapper component), and include this class into that component, and then put things within that component
 .wrapper {
   @extend %cf;
   max-width: 35.5em;
@@ -31,6 +33,7 @@
 
 
 /*     Main     */
+/*
 .main {
   clear: both;
   background: $white;
@@ -41,6 +44,7 @@
 }
 
 /*     Utitlity classes     */
+/*
 .mobile {
   @include mq(m) {
     display: none;
@@ -81,7 +85,9 @@
 .center {
   text-align: center !important;
 }
+*/
 /* responsive videos */
+/*
 .video figure {
   height: 0;
   overflow: hidden;
@@ -113,82 +119,5 @@
   }
 }
 
-
-.form {
-  label {
-    display: block;
-    margin-bottom: 5px;
-    text-align: left;
-  }
-  input {
-    float: left;
-    display: inline-block;
-    width: 85%;
-    height: 35px;
-    padding: 3px 6px;
-    border: 0;
-    color: $text;
-    @include border-radius(0);
-  }
-  button {
-    float: left;
-    display: inline-block;
-    width: 35px;
-    height: 35px;
-    line-height: 35px;
-    padding: 0 6px;
-    border: 0;
-    background: $blue;
-    color: $white;
-    @include rems(35);
-  }
-}
-.form--stacked {
-  label {
-    display: block;
-    margin-bottom: 5px;
-    text-align: left;
-  }
-  input {
-    display: block;
-    width: 100%;
-    height: 35px;
-    padding: 3px 6px;
-    margin-bottom: 12px;
-    border: 0;
-    color: $text;
-    @include border-radius(4px);
-  }
-  textarea {
-    display: block;
-    width: 100%;
-    padding: 3px 6px;
-    margin-bottom: 12px;
-    border: 0;
-    color: $text;
-    @include border-radius(4px);
-  }
-  button {
-    display: inline-block;
-    margin-top: 5px;
-    border: 0;
-  }
-}
-
-.form-select {
-  margin: 0 0 20px;
-  height: 43px;
-  width: 100%;
-  padding: 3px 8px;
-  color: $gray;
-  border: 1px solid $gray;
-  -webkit-appearance: none;
-  -webkit-border-radius: 0px;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  background: $white url("/images/dropdown.png") no-repeat 100% 50%;
-  background-size: 44px 43px;
-  @include rems(17);
-  @include border-radius(4px);
-}
+*/
+.dummy-class {}
