--- a/src/shared/components/elements/Col/style.scss
+++ b/src/shared/components/elements/Col/style.scss
@@ -1,3 +1,4 @@
+//just do teh columns yourself, that way can do columns with flexbox, or other kinds of components
 @import 'theme/_helpers';
 
 .col-xs-12 {
