can now update channels, and live update drafts of plans

--- a/src/shared/components/elements/Button/style.scss
+++ b/src/shared/components/elements/Button/style.scss
@@ -4,7 +4,7 @@
   border-radius: 6px;
   transition: background .5s;
   cursor: pointer;
-  &hover {
+  &:hover {
     transition: background .5s;
   }
 
