--- a/src/user/components/partials/MessageTemplate/style.scss
+++ b/src/user/components/partials/MessageTemplate/style.scss
@@ -1,6 +1,9 @@
 @import 'theme/_helpers';
 
 .messageTemplate {
+  .utmHeader {
+    margin: .5rem;
+  }
   @include mq(xs) {
   }
   @include mq(sm) {
