--- a/src/shared/components/groups/MenuItem/style.scss
+++ b/src/shared/components/groups/MenuItem/style.scss
@@ -8,16 +8,17 @@
     display: block;
     padding: 10px 20px;
     background: $nav-bg;
-    color: $white;
+    color: $text;
     &:hover {
-      color: $primary;
-      background: $nav-hover;
+      color: $nav-hover-font;
+      background: $nav-hover-bg;
     }
   }
   & > a.navActive {
-    background: black;
+    background: $nav-hover-bg;
+    color: $nav-hover-font;
     &:hover {
-      color: $white;
+      color: $nav-hover-font;
     }
   }
 
