--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -43,12 +43,42 @@ $module_red-2: #c32525;
 $module_green: #42B655;
 $module_quote: #dedede;
 
+
+$primary: #4f4081;
+$secondary: #95669c;
+$light-purple-gray: #ada4cd;
+$dark-purple-gray: #7e7796;
+$light-purple-complement: #7e66cd;
+$dark-purple-complement: #30274e;
+
+$accent1: rgb(155, 155, 155); //medium dark gray
+$accent2: rgb(250, 175, 0); //bright orange
+$accent3: rgb(176, 69, 69); //burnt red
+
+$light-gray-bg: #FAFAFA; //this is really light, almost white
+
+//this is for nav buttons
+$nav-hover-bg: $light-purple-gray;
+$nav-hover-font: $white;
+$active: $nav-hover-bg;
+
+$nav-border: #474747;
+
 $text: #333;
 $msg: #A3A3A3;
-$sidebar: $gray-bg;
-$nav-bg: #595959;
-$header: $nav-bg;
+
+$nav-bg: $module_gray-1;
+
+// sidebar
+$sidebar: $module_gray-1;
+$sidebar-width: 250px;
+$nav-menu-item-bg: $module_gray-2;
+
+
+// header and footer
+$header-bg: $white;
 $footer: $navy;
+
 $clients-bg: $white;
 $features-bg: $blue-bg;
 $completion-bg: $blue;
@@ -57,19 +87,7 @@ $integrations-bg: $gray-bg;
 $get-started-bg: $white;
 $how-it-works-bg: $red-bg;
 $custom-assessment-bg: $red-dk-bg;
-$play-bg: #A79032;
-
-$primary: #17C3A9;
-$active: rgb(23, 195, 169);
-$secondary: rgb(0, 125, 125);
-$accent1: rgb(155, 155, 155);
-$accent2: rgb(250, 175, 0);
-$accent3: rgb(176, 69, 69);
-
-$nav-hover: #626262;
-$nav-border: #474747;
-
-$light-gray-bg: #FAFAFA;
+$play-bg: #A79032; //a olive green
 
 /*     Link colors     */
 $link: $blue;
