--- a/src/user/components/partials/UserNavbar/style.scss
+++ b/src/user/components/partials/UserNavbar/style.scss
@@ -1,9 +1,40 @@
 @import 'theme/_helpers';
 
-.leftNav {
-}
-.rightNav {
-}
-.mainNav {
-  width: 100%;
+.header {
+  border-bottom: $primary solid 2px;
+  background-color: $header-bg;
+
+  .leftNav {
+    width: $sidebar-width;
+    a {
+      height: 100%;
+      padding: 0;
+      height: 40px;
+      margin: 5px 10px;
+
+      img {
+        display: block;
+        height: 100%;
+        //margin: auto;
+      }
+    }
+
+    button {
+      margin: 0;
+      width: 150px;
+    }
+  }
+  .centerNav {
+    height: 100%;
+    width: 100%;
+
+  }
+  .rightNav {
+    right: 0;
+    position: absolute;
+  }
+  .mainNav {
+    width: 100%;
+    height: 100%;
+  }
 }
