--- a/src/user/components/partials/UserSidebar/style.scss
+++ b/src/user/components/partials/UserSidebar/style.scss
@@ -2,8 +2,8 @@
 
 .sidebar {
   min-height: 100vh;
-  min-width: 250px;
-  width: 250px;
+  min-width: $sidebar-width;
+  width: $sidebar-width;
   box-sizing: border-box;
   background: $sidebar;
   color: $white;
@@ -17,7 +17,7 @@
   background: $nav-bg;
 
   a {
-    border: 1px solid $nav-border;
+    //border: 1px solid $nav-border;
   }
 }
 
