--- a/src/shared/components/elements/Button/style.scss
+++ b/src/shared/components/elements/Button/style.scss
@@ -11,4 +11,11 @@
   a, a:visited, a:hover {
     color: #fff;
   }
+
+  &.disabled {
+    cursor: not-allowed;
+    a {
+      cursor: not-allowed;
+    }
+  }
 }
