fix several styles; clean a couple bugs along the way

--- a/src/shared/components/elements/Button/style.scss
+++ b/src/shared/components/elements/Button/style.scss
@@ -8,8 +8,8 @@
     transition: background .5s;
   }
 
-  a, a:visited, a:hover {
-    color: #fff;
+  a, a:visited, a:hover, a:active {
+    color: inherit;
   }
 
   &.disabled {
