--- a/src/shared/components/partials/AccountMenu/style.scss
+++ b/src/shared/components/partials/AccountMenu/style.scss
@@ -10,14 +10,43 @@
     padding: 5px;
   }
 
+  .scrim {
+
+  }
+  .caret {
+    left: 50%;
+    border-top: 1px solid #d6d6d6;
+    border-left: 1px solid #d6d6d6;
+    display: block;
+    position: absolute;
+    top: 47px;
+    z-index: 2;
+    background-color: $nav-bg;
+    width: 12px;
+    height: 12px;
+    -webkit-transform: rotate(45deg);
+    -webkit-transform-origin: 0% 0;
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+    transform-origin: 0% 0;
+  }
+
   .menuDropdown {
     background-color: $nav-bg;
     position: absolute;
-    top: 47px;
+    top: 55px;
     margin: 0px;
     padding: 0;
     right: 0;
     display: block;
     min-width: 250px;
+    border-bottom: 1px solid #d6d6d6;
+    border-left: 1px solid #d6d6d6;
+    border-right: 1px solid #d6d6d6;
+    border-radius: 2px;
+
+    li {
+      border-top: 1px solid #e3e3e3;
+    }
   }
 }
