--- a/src/user/components/partials/UserNavbar/style.scss
+++ b/src/user/components/partials/UserNavbar/style.scss
@@ -9,7 +9,7 @@
     a {
       height: 100%;
       padding: 0;
-      height: 40px;
+      height: calc(#{$header-height} - 10px); //subtract 10 for the margin
       margin: 5px 10px;
 
       img {
@@ -18,6 +18,7 @@
         //margin: auto;
       }
     }
+
 
     button {
       margin: 0;
@@ -30,8 +31,6 @@
 
   }
   .rightNav {
-    right: 0;
-    position: absolute;
   }
   .mainNav {
     width: 100%;
