--- a/src/user/components/templates/UserContent/style.scss
+++ b/src/user/components/templates/UserContent/style.scss
@@ -1,11 +1,12 @@
 @import 'theme/_helpers';
 
 
-main {
+main.userContent {
   width: 960px;
   background: $user-content-bg;
   text-align: center;
   padding: 0 10px;
+  margin: 0 auto;
   h1 {
     @include rems(45);
   }
