--- a/src/shared/components/groups/ButtonGroup/style.scss
+++ b/src/shared/components/groups/ButtonGroup/style.scss
@@ -1,16 +1,24 @@
 .buttonGroup {
   margin: 10px;
 
-  .vertical {
-
+  &.vertical {
+    .container {
+      width: 100%;
+      display: block;
+    }
   }
 
-  .horizontal {
-
+  &.horizontal {
+    .container {
+      display: inline-block;
+    }
   }
-  button {
-    margin: 0;
-    border-radius: 0;
+  .container {
+    button {
+      width: 100%;
+      margin: 0;
+      border-radius: 0;
+    }
   }
 
 }
