--- a/src/shared/components/groups/MenuItem/style.scss
+++ b/src/shared/components/groups/MenuItem/style.scss
@@ -3,6 +3,7 @@
 .menuItem {
   text-decoration: none;
   cursor: pointer;
+  text-align: left;
   list-style: none;
   & > a, & > a:visited {
     display: block;
@@ -51,5 +52,9 @@
     border-radius: 5px;
     margin-top: -3px;
     font-weight: bold;
+  }
+
+  ul {
+    padding-left: 30px;
   }
 }
