--- a/src/theme/_base.scss
+++ b/src/theme/_base.scss
@@ -46,3 +46,23 @@ a {
   }
 }
 
+h1 {
+  @include rems(45);
+}
+h4 {
+  @include rems(18);
+  margin: 2rem 0 1rem 0;
+}
+h5 {
+  @include rems(12);
+  text-align: center;
+  margin: 1rem 0;
+}
+input {
+  width: 90%;
+  color: $text;
+  margin: 0;
+}
+button {
+  //width: 90%;
+}
