--- a/src/user/components/templates/LandingPage/style.scss
+++ b/src/user/components/templates/LandingPage/style.scss
@@ -16,7 +16,7 @@
   overflow: hidden;
 
   .headerContentCtn {
-    width: 960px;
+    max-width: 960px;
     margin: 0 auto;
     overflow: hidden;
 
