--- a/src/shared/components/groups/MenuItem/style.scss
+++ b/src/shared/components/groups/MenuItem/style.scss
@@ -54,6 +54,12 @@
     font-weight: bold;
   }
 
+  .icon {
+    //float: right;
+    padding: 3px 10px;
+    margin-top: -3px;
+  }
+
   ul {
     padding-left: 30px;
   }
