--- a/src/shared/components/groups/DropImage/style.scss
+++ b/src/shared/components/groups/DropImage/style.scss
@@ -10,14 +10,16 @@
   color: $black;
   font-size: 18px;
   font-weight: bold;
+  height: 100%;
 
   &:hover {
     cursor: pointer;
-    opacity: .9;
+    opacity: .5;
     transition: opacity 1s;
   }
 
   div {
     @include vertical-align;
+    padding: 5px;
   }
 }
