--- a/src/user/components/partials/PostPicker/style.scss
+++ b/src/user/components/partials/PostPicker/style.scss
@@ -20,6 +20,12 @@
 
     .postCard {
       width: 100%;
+      &.dirty {
+        border: blue solid;
+      }
+      &.toDelete {
+        border: red solid;
+      }
     }
   }
 }
