sending channels with providers; more robust channel implementation

--- a/src/shared/components/partials/Modal/style.scss
+++ b/src/shared/components/partials/Modal/style.scss
@@ -25,6 +25,12 @@
   margin-left: auto;
   margin-right: auto;
   @include vertical-align
+
+  img.headerImg {
+    border-radius: 15px;
+    width: 50px;
+    float: right;
+  }
 }
 .modalContent {
   position: relative;
