popup component; add confirmation popups before deleting

--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -23,8 +23,9 @@ $green-hover: #369646;
 $red-bg: #da513d;
 $red-dk: #c94b39;
 $red-dk-bg: #b34232;
-$red-button: #7d2e23;
+$red-button: #7d2e23; //is darker actually
 $red-hover: #5e231b;
+$danger: $red-bg; //bright red
 $ghost-blue: #058fc4;
 $ghost-red: #cb4e4e;
 $ghost-yellow: #ffbe00;
