UI fixes for posts and campaigns; clean it up and show more

--- a/src/user/components/partials/PostCard/style.scss
+++ b/src/user/components/partials/PostCard/style.scss
@@ -3,19 +3,13 @@
 .profilePic {
   width: 50px;
 }
-
+.cardLabel{
+  font-weight: bold;
+}
 .utms {
   width: 100%;
-  .utmHeader {
-    margin: .5rem;
-  }
   .utmField {
-    @include mq(xs) {
-      @include cols(6)
-    }
-    @include mq(sm) {
-      @include cols(3)
-    }
+    width: 100%;
   }
 
 }
