--- a/src/user/components/partials/PostPicker/style.scss
+++ b/src/user/components/partials/PostPicker/style.scss
@@ -7,19 +7,20 @@
 
   .providerColumn {
     @include mq(2xs) {
-      @include cols(12)
+      @include cols(12);
     }
-    //@include mq(md) {
-    //  @include cols(6)
-    //}
-    @include mq(lg) {
-      @include cols(4)
+    @include mq(xs) {
+      @include cols(12);
+    }
+    @include mq(md) {
+      @include cols(4);
     }
     border-right: 1px solid $black;
     border-left: 1px solid $black;
 
     .postCard {
       width: 100%;
+      //min-width: 200px;
     }
   }
 }
