handle provider api errors

--- a/src/user/components/partials/PostPicker/style.scss
+++ b/src/user/components/partials/PostPicker/style.scss
@@ -21,6 +21,11 @@
     .postCard {
       width: 100%;
       //min-width: 200px;
+
+      &.publishedPost {
+        cursor: not-allowed;
+        background-color: gray;
+      }
     }
   }
 }
