--- a/src/user/components/partials/PostTemplateWrapper/style.scss
+++ b/src/user/components/partials/PostTemplateWrapper/style.scss
@@ -18,3 +18,19 @@
   }
 }
 
+.instructions {
+  text-align: left;
+
+}
+.leftColumn {
+  margin-right: 30px;
+  font-weight: bold;
+  div {
+    margin-bottom: 5px;
+  }
+}
+.rightColumn {
+  div {
+    margin-bottom: 5px;
+  }
+}
