extract out post editor; can also now add vars using a button

--- a/src/user/components/partials/PostEditor/style.scss
+++ b/src/user/components/partials/PostEditor/style.scss
@@ -1,6 +1,6 @@
 @import 'theme/_helpers';
 
-.postMenu {
+.recordMenu {
   @include mq(xs) {
     @include cols(12)
   }
@@ -9,7 +9,7 @@
   }
 }
 
-.postFields {
+.recordFields {
   .textEditor {
     //TODO size by characters, depending on the maximum allowed for that post type
     textarea {
