--- a/src/user/components/partials/PostTemplateWrapper/style.scss
+++ b/src/user/components/partials/PostTemplateWrapper/style.scss
@@ -20,11 +20,15 @@
 
 .instructions {
   text-align: left;
+  h5 {
+    font-size: 1rem;
+  }
 
 }
 .leftColumn {
   margin-right: 30px;
   font-weight: bold;
+  //TODO use a class
   div {
     margin-bottom: 5px;
   }
