--- a/src/user/components/partials/PostEditor/style.scss
+++ b/src/user/components/partials/PostEditor/style.scss
@@ -49,3 +49,23 @@
   background-position: center;
 }
 
+.instructions {
+  text-align: left;
+  h5 {
+    font-size: 1rem;
+  }
+
+}
+.leftColumn {
+  margin-right: 30px;
+  font-weight: bold;
+  //TODO use a class
+  div {
+    margin-bottom: 5px;
+  }
+}
+.rightColumn {
+  div {
+    margin-bottom: 5px;
+  }
+}
