--- a/src/user/components/templates/UserContent/style.scss
+++ b/src/user/components/templates/UserContent/style.scss
@@ -3,8 +3,11 @@
 
 main.userContent {
   width: 960px;
+  position: relative;
   background: $user-content-bg;
   text-align: center;
-  padding: 0 10px;
   margin: 0 auto;
+  padding: 0 10px 30px 0 ;
+}
+.rightColumn {
 }
