--- a/src/user/components/templates/LandingPage/style.scss
+++ b/src/user/components/templates/LandingPage/style.scss
@@ -5,6 +5,7 @@
   h1 {
     margin-top: 0;
     width: 100%;
+    text-align: center;
   }
   h2 {
     display: inline-block;
@@ -25,7 +26,7 @@
   //puts some padding etc. For all the stuff inside the header
   .headerContentCtn {
     img {
-      height: 250px;
+      max-height: 250px;
     }
   }
 }
@@ -50,8 +51,18 @@
   max-width: 960px;
   margin-right: auto;
   margin-left: auto;
+
+  //could just combine these divs, unless the h1 is outside of the contentWrapper. So leave it so it's easy to change in teh future :)
+  .contentWrapper {
+    min-height: 500px;
+  }
+  .bottomContentWrapper {
+    min-height: 400px;
+  }
+
 }
 //to divide left and right of the middle containers
+//currently I just have to do direction: row-reverse in the parent flexbox though
 .leftSection {
   @include mq(xs) {
     @include cols(12)
@@ -101,6 +112,7 @@
   margin-top: 10px;
 }
 .bottomCtn {
+  min-height: 400px;
   button {
     margin: 0 auto;
   }
