--- a/src/user/components/partials/AddPost/style.scss
+++ b/src/user/components/partials/AddPost/style.scss
@@ -1,1 +1,10 @@
 @import 'theme/_helpers';
+
+.fields {
+  width: 100%;
+}
+.select {
+  max-width: 400px;
+  min-width: 400px;
+  display: block;
+}
