--- a/src/user/components/templates/UserContent/style.scss
+++ b/src/user/components/templates/UserContent/style.scss
@@ -7,7 +7,8 @@ main.userContent {
   background: $user-content-bg;
   text-align: center;
   margin: 0 auto;
-  padding: 0 10px 30px 0 ;
+  //padding: 0 10px 30px 0 ;
+  padding: 10px 30px 30px 30px;
 }
 .rightColumn {
 }
