table styles; default utms; simplify utm instructions

--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -48,6 +48,7 @@ $module_quote: #dedede;
 $primary: #4f4081;
 $secondary: #95669c;
 $light-purple-gray: #ada4cd;
+$even-lighter-purple-gray: #ada4cd61;
 $dark-purple-gray: #7e7796;
 $light-purple-complement: #7e66cd;
 $dark-purple-complement: #30274e;
