--- a/src/shared/components/groups/Popup/style.scss
+++ b/src/shared/components/groups/Popup/style.scss
@@ -7,18 +7,13 @@
 
 .popup {
   position: absolute;
-  top: calc(100% - 6px);
   background-color: transparent;
   z-index: 100;
 
   .scrim {
     background-color: transparent;
-
   }
   .caret {
-    top: 3px;
-    border-top: 1px solid #d6d6d6;
-    border-left: 1px solid #d6d6d6;
     display: block;
     position: relative;
     //position: absolute;
@@ -64,6 +59,22 @@
     right: 0;
     .caret {
       left: calc(100% - 25px);
+    }
+  }
+  &.side-bottom {
+    top: calc(100% - 6px);
+    .caret {
+      top: 3px;
+      border-top: 1px solid #d6d6d6;
+      border-left: 1px solid #d6d6d6;
+    }
+  }
+  &.side-top {
+    bottom: calc(100% - 6px);
+    .caret {
+      top: -9px;
+      border-bottom: 1px solid #d6d6d6;
+      border-right: 1px solid #d6d6d6;
     }
   }
 }
