--- a/src/user/components/partials/PlanTable/style.scss
+++ b/src/user/components/partials/PlanTable/style.scss
@@ -12,7 +12,7 @@
 .table {
   border-spacing: 0;
   th, td {
-    padding: 10px 25px;
+    padding: 0px 25px;
   }
 }
 .evenRow {
@@ -24,4 +24,12 @@
 
 .popupWrapper {
   position: relative;
+}
+.buttonStack {
+  margin: 15px 0;
+  button {
+    display: block;
+    margin: 2px !important;
+    width: 120px;
+  }
 }
