--- a/src/theme/_base.scss
+++ b/src/theme/_base.scss
@@ -32,6 +32,7 @@ img, object {
 }
 
 a {
+  cursor: pointer;
   color: $link;
   text-decoration: none;
   transition: all 0.3s ease-out;
@@ -47,6 +48,7 @@ a {
 }
 
 h1 {
+  margin-top: 0px;
   @include rems(45);
 }
 h4 {
