--- a/src/user/components/templates/UserContent/style.scss
+++ b/src/user/components/templates/UserContent/style.scss
@@ -9,6 +9,11 @@ main.userContent {
   margin: 0 auto;
   //padding: 0 10px 30px 0 ;
   padding: 10px 30px 30px 30px;
+  border-left: 1px solid $primary;
+
+  h1 {
+    @include rems(36)
+  }
 }
 .rightColumn {
 }
