--- a/src/user/components/templates/UserContent/style.scss
+++ b/src/user/components/templates/UserContent/style.scss
@@ -2,18 +2,20 @@
 
 
 main.userContent {
-  width: 960px;
+  width: 100%;
   position: relative;
   background: $user-content-bg;
-  text-align: center;
-  margin: 0 auto;
   //padding: 0 10px 30px 0 ;
-  padding: 10px 30px 30px 30px;
   border-left: 1px solid $primary;
 
+}
+.rightColumn {
+  position: relative;
+  width: 960px;
+  padding: 10px 30px 30px 30px;
+  text-align: center;
+  margin: 0 auto;
   h1 {
     @include rems(36)
   }
-}
-.rightColumn {
 }
