--- a/src/user/components/templates/UserContent/style.scss
+++ b/src/user/components/templates/UserContent/style.scss
@@ -11,7 +11,7 @@ main.userContent {
 }
 .rightColumn {
   position: relative;
-  width: 960px;
+  max-width: 960px;
   padding: 10px 30px 30px 30px;
   text-align: center;
   margin: 0 auto;
