--- a/src/shared/components/groups/ContactUsButton/style.scss
+++ b/src/shared/components/groups/ContactUsButton/style.scss
@@ -14,6 +14,15 @@
   .wrapper {
     position: relative;
   }
+  h3 {
+    margin-bottom: 5px;
+
+  }
+
+  label {
+    display: block;
+    margin-bottom: 5px;
+  }
 }
 
 .contactUsButton {
