--- a/src/user/components/partials/PostPicker/style.scss
+++ b/src/user/components/partials/PostPicker/style.scss
@@ -14,6 +14,9 @@
 .table {
   border-right: .5px solid $black;
   border-left: .5px solid $black;
+  h2 {
+    margin-top: 0;
+  }
 
   .providerColumn {
     @include mq(sm2) {
@@ -31,7 +34,7 @@
     border-bottom: 1px solid $black;
 
     h2 {
-      margin: 0;
+      margin-bottom: 0;
       font-weight: normal;
     }
     //flexbox likes to shrink its children if it has overflow, rather than just adding a scrollbar. Min height stops that from happening
