--- a/src/user/components/partials/PostCard/style.scss
+++ b/src/user/components/partials/PostCard/style.scss
@@ -2,10 +2,11 @@
 
 .small {
   padding: 5px;
-  margin: 0 10px 10px 10px;
+  margin: 0 0px 0px 0px;
   font-size: 12px;
   min-height: 80px;
   max-height: 80px;
+  max-width: 250px;
   .contentSection {
     //display: flex;
     //.cardLabel{
