--- a/src/user/components/partials/PostPicker/style.scss
+++ b/src/user/components/partials/PostPicker/style.scss
@@ -55,6 +55,7 @@
       width: 200px;
       margin: 0 auto 10px auto;
       overflow: auto;
+      float: none;
     }
     .postCard {
       width: 100%;
