--- a/src/user/components/partials/PlanTable/style.scss
+++ b/src/user/components/partials/PlanTable/style.scss
@@ -29,7 +29,7 @@
   margin: 15px 0;
   button {
     display: block;
-    margin: 2px !important;
+    margin: 4px !important; //margins are collapsing, and thsoe in campaign are not for some reason, so making consistenT
     width: 120px;
   }
 }
