stack the buttons

--- a/src/user/components/partials/PlanTable/style.scss
+++ b/src/user/components/partials/PlanTable/style.scss
@@ -27,6 +27,7 @@
 }
 .buttonStack {
   margin: 15px 0;
+  width: 130px;
   button {
     display: block;
     margin: 4px !important; //margins are collapsing, and thsoe in campaign are not for some reason, so making consistenT
