--- a/src/shared/components/elements/Card/style.scss
+++ b/src/shared/components/elements/Card/style.scss
@@ -1,6 +1,9 @@
 @import 'theme/_helpers';
 .wrapper {
-  overflow: hidden;
+  overflow: visible;
+  padding: 0 15px 20px 15px;
+  box-sizing: border-box;
+
   @include mq(2xs) {
     @include cols(12)
   }
@@ -15,13 +18,11 @@
 .card {
   //can easily be overridden by just nesting two or more classes
   text-align: left;
-  box-sizing: border-box;
   border-radius: 3px;
   border-top: $primary solid 3px; //might make the color dynamic
   overflow-y: auto;
   overflow-x: none;
   padding: 10px;
-  margin: 0 15px 20px 15px;
   width: 100%;
   @include box-shadow(0 1px 1px rgba(0,0,0,0.1))
 
