prompt adding channels if they don't have any yet

--- a/src/shared/components/groups/MenuChild/style.scss
+++ b/src/shared/components/groups/MenuChild/style.scss
@@ -5,7 +5,8 @@
   cursor: pointer;
   list-style: none;
   text-align: left;
-  & > a, & > a:visited {
+  //basic style for all links
+  & > a, & > a:visited, & > .noLink  {
     display: block;
     padding: 10px 20px;
     background: $nav-bg;
@@ -15,7 +16,8 @@
       background: $nav-hover-bg;
     }
   }
-  & > a.navActive {
+  //for any active nav, w/ or w/o link
+  & > a.navActive, div.navActive.noLink  {
     background: $nav-hover-bg;
     color: $nav-hover-font;
     &:hover {
