--- a/src/shared/components/groups/MenuItem/style.scss
+++ b/src/shared/components/groups/MenuItem/style.scss
@@ -18,7 +18,7 @@
   }
 
   //for any active nav, w/ or w/o link
-  & > a.navActive, div.navActive.noLink {
+  & > a.navActive, .navActive.noLink {
     background: $nav-hover-bg;
     color: $nav-hover-font;
     &:hover {
