--- a/src/user/components/partials/CampaignTable/style.scss
+++ b/src/user/components/partials/CampaignTable/style.scss
@@ -14,6 +14,9 @@
 }
 .table {
   border-spacing: 0px;
+  th, td {
+    padding: 1px 5px;
+  }
 }
 .evenRow {
   background: $even-lighter-purple-gray;
